--- a/js/npm-scripts/package.json
+++ b/js/npm-scripts/package.json
@@ -7,46 +7,34 @@
     "port": "1337"
   },
   "scripts": {
-    "start": "node index.js",
-    "poststart": "npm run build && npm run server",
-    "server": "npm-run-all --parallel server:*",
-    "server:create": "http-server public/$npm_package_version -p $npm_package_config_port",
-    "server:launch": "open http://localhost:$npm_package_config_port",
-    "pretest": "npm run lint",
-    "test": "npm run mocha",
-    "watch": "npm-run-all --parallel watch:*",
-    "watch:test": "npm test -- --watch",
-    "watch:lint": "onchange '**/*.js' '**/*.scss' -- npm run lint",
-    "cover": "nyc npm t",
-    "postcover": "rm -rf .nyc_output",
-    "cover:open": "open coverage/index.html",
-    "lint": "npm-run-all --parallel lint:**",
-    "lint:js": "eslint --cache --fix ./",
-    "lint:css": "stylelint '**/*.scss' --syntax scss",
-    "lint:css:fix": "stylefmt -R src/",
-    "mocha": "mocha spec/ --require babel-register",
-    "prebuild": "rm -rf public/$npm_package_version/",
-    "build": "npm-run-all build:*",
-    "build:html": "pug --obj data.json src/index.pug --out public/$npm_package_version/",
-    "build:css": "node-sass src/index.scss | postcss -c .postcssrc.json | cssmin > public/$npm_package_version/index.min.css",
-    "build:js": "mustache data.json src/index.mustache.js | uglifyjs > public/$npm_package_version/index.min.js"
+    "start": "nps",
+    "test": ".scripts/test.sh",
+    "server": "babel-node ./scripts/server.js"
   },
   "keywords": [],
   "author": "Daniel Hoksza <daniel.hoksza@gmail.com> (http://ledanielh.github.io/)",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.22.2",
     "babel-register": "^6.22.0",
+    "cross-env": "^3.1.4",
+    "cross-var": "^1.0.2",
     "cssmin": "^0.4.3",
     "eslint": "^3.15.0",
     "http-server": "^0.9.0",
+    "husky": "^0.13.1",
     "mocha": "^3.2.0",
     "mustache": "^2.3.0",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.1",
     "nyc": "^10.1.2",
     "onchange": "^3.2.1",
+    "opn-cli": "^3.1.0",
+    "p-s": "^3.1.0",
     "postcss-cli": "^2.6.0",
     "pug-cli": "^1.0.0-alpha6",
+    "rimraf": "^2.5.4",
+    "shelljs": "^0.7.6",
     "stylefmt": "^5.1.1",
     "stylelint": "^7.8.0",
     "uglify-js": "^2.7.5"
